tests/baselines/reference/parserX_TypeArgumentList1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/TypeArgumentLists/parserX_TypeArgumentList1.ts (5 errors) ====
    Foo<A,B,\ C>(4, 5, 6);
            
!!! error TS1127: Invalid character.
    ~~~
!!! error TS2304: Cannot find name 'Foo'.
        ~
!!! error TS2304: Cannot find name 'A'.
          ~
!!! error TS2304: Cannot find name 'B'.
              ~
!!! error TS2304: Cannot find name 'C'.